...
                                    <tabBarItem systemItem="downloads" id="ZZ2-OH-pFp"/>
                                    <tabBarItem systemItem="more" id="Mdx-CX-ZaS"/>
                                </items>
                            </tabBar>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NwQ-ps-bIP">
                                <rect key="frame" x="30" y="115" width="354" height="30"/>
                                <state key="normal" title="UIButton Showcase"/>
                                <connections>
                                    <action selector="showButton:" destination="NGe-3s-ugJ" eventType="touchUpInside" id="4a0-P3-0v6"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LV5-Tm-hRx">
                                <rect key="frame" x="30" y="153" width="354" height="30"/>
...
                                <connections>
                                    <action selector="placementButton:" destination="NGe-3s-ugJ" eventType="touchUpInside" id="P4t-ho-BUg"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k3P-9S-UIb">
                                <rect key="frame" x="20" y="267" width="30" height="30"/>
                                <state key="normal" title="Left"/>
                                <connections>
                                    <action selector="placementButton:" destination="NGe-3s-ugJ" eventType="touchUpInside" id="l35-oG-xdJ"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o2a-7Y-5GD">
                                <rect key="frame" x="183.5" y="267" width="47" height="30"/>
...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lcz-V6-16s">
                                <rect key="frame" x="141" y="770" width="173" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="173" id="Ygu-Oe-vJW"/>
                                </constraints>
                                <state key="normal" title="Sequence"/>
                                <connections>
                                    <action selector="playSequence:" destination="NGe-3s-ugJ" eventType="touchUpInside" id="HS9-tm-1VF"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
